--- a/css/index.css
+++ b/css/index.css
@@ -670,6 +670,27 @@ h4 {
     font-size: 18px;
     line-height: 22px;
 }
+.AFF-SpecialAnnouncements-MainStage {
+    padding: 177px 26px 169px 15px;
+    height: 691px;
+}
+.AFF-SpecialAnnouncements-MainStage-Header{
+    font-family: Chickweed Tilting, Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 34px;
+    line-height: 34px;
+    margin: 20px 0 30px;
+    -webkit-transform: rotate(-10deg); 
+    -moz-transform: rotate(-10deg);   
+}
+.AFF-SpecialAnnouncements-MainStage-Content{
+    font-family: Komika Title, Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #e3490b;
+    text-align: center;
+    margin-top: 0px;
+    padding-top: 0;
+    font-size: 24px;
+    line-height: 30px;
+}
 .AFF-SpecialAnnouncements-History-Email{
     background-image: url(../images/HistoryEmailRibbon.png);background-repeat: no-repeat;
     background-position: center top;
