--- a/css/index.css
+++ b/css/index.css
@@ -497,6 +497,7 @@ h4 {
     background-position: center top;
     padding: 160px 1px 130px 0px;
     margin-top: 160px;
+    height: 691px;
 }
 .AFF-EntrySteps-Content {
     font-family: Komika Title, Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
